add spark date functions

--- a/notebooks/pysparkbasics/L02_DataFrame/S01_DataStructures/05_TimeDate.ipynb
+++ b/notebooks/pysparkbasics/L02_DataFrame/S01_DataStructures/05_TimeDate.ipynb
@@ -17,19 +17,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession, DataFrame\n",
-    "from pyspark.sql.functions import lit, unix_timestamp, col, from_unixtime, to_timestamp, date_format, to_date"
+    "from pyspark.sql.functions import lit, unix_timestamp, col, from_unixtime, to_timestamp, date_format, to_date,current_date\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/07/22 14:36:59 WARN Utils: Your hostname, ubuntu resolves to a loopback address: 127.0.1.1; using 192.168.184.146 instead (on interface ens33)\n",
+      "22/07/22 14:36:59 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/opt/spark/spark-3.1.2/jars/spark-unsafe_2.12-3.1.2.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n",
+      "22/07/22 14:36:59 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "local = True\n",
     "\n",
@@ -45,16 +64,29 @@
     "    .config(\"spark.executor.memory\",\"8g\") \\\n",
     "    .config(\"spark.kubernetes.namespace\", os.environ['KUBERNETES_NAMESPACE']) \\\n",
     "    .getOrCreate()\n",
-    "\n",
-    "data = [(\"2019-07-01 12:01:19\", \"07-01-2019 12:01:19.888\", \"07-01-2019\"),\n",
-    "            (\"2018-07-01 12:01:19\", \"07-01-2018 12:01:19.666\", \"07-01-2018\"),\n",
-    "            (\"2017-07-01 12:01:19\", \"07-01-2017 12:01:19.111\", \"07-01-2017\")]\n",
-    "columns = [\"timestamp_1\", \"timestamp_2\", \"timestamp_3\"]"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
+   "outputs": [],
+   "source": [
+    "data = [(\"2019-01-01 12:01:19\", \"01-01-2019 12:01:19.888\", \"01-01-2019\"),\n",
+    "            (\"2018-07-01 12:01:19\", \"07-01-2018 12:01:19.666\", \"07-01-2018\"),\n",
+    "            (\"2017-12-01 12:01:19\", \"12-01-2017 12:01:19.111\", \"12-01-2017\")]\n",
+    "columns = [\"timestamp_1\", \"timestamp_2\", \"timestamp_3\"]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -64,9 +96,9 @@
       "+-------------------+--------------------+-----------+\n",
       "|        timestamp_1|         timestamp_2|timestamp_3|\n",
       "+-------------------+--------------------+-----------+\n",
-      "|2019-07-01 12:01:19|07-01-2019 12:01:...| 07-01-2019|\n",
+      "|2019-01-01 12:01:19|01-01-2019 12:01:...| 01-01-2019|\n",
       "|2018-07-01 12:01:19|07-01-2018 12:01:...| 07-01-2018|\n",
-      "|2017-07-01 12:01:19|07-01-2017 12:01:...| 07-01-2017|\n",
+      "|2017-12-01 12:01:19|12-01-2017 12:01:...| 12-01-2017|\n",
       "+-------------------+--------------------+-----------+\n",
       "\n",
       "root\n",
@@ -118,15 +150,15 @@
       " |-- timestamp_1: string (nullable = true)\n",
       " |-- timestamp_2: string (nullable = true)\n",
       " |-- timestamp_3: string (nullable = true)\n",
-      " |-- timestamp_4: long (nullable = true)\n",
+      " |-- unix_timestamp: long (nullable = true)\n",
       "\n",
-      "+-------------------+--------------------+-----------+-----------+\n",
-      "|        timestamp_1|         timestamp_2|timestamp_3|timestamp_4|\n",
-      "+-------------------+--------------------+-----------+-----------+\n",
-      "|2019-07-01 12:01:19|07-01-2019 12:01:...| 07-01-2019| 1632594547|\n",
-      "|2018-07-01 12:01:19|07-01-2018 12:01:...| 07-01-2018| 1632594547|\n",
-      "|2017-07-01 12:01:19|07-01-2017 12:01:...| 07-01-2017| 1632594547|\n",
-      "+-------------------+--------------------+-----------+-----------+\n",
+      "+-------------------+--------------------+-----------+--------------+\n",
+      "|        timestamp_1|         timestamp_2|timestamp_3|unix_timestamp|\n",
+      "+-------------------+--------------------+-----------+--------------+\n",
+      "|2019-07-01 12:01:19|07-01-2019 12:01:...| 07-01-2019|    1658493752|\n",
+      "|2018-07-01 12:01:19|07-01-2018 12:01:...| 07-01-2018|    1658493752|\n",
+      "|2017-07-01 12:01:19|07-01-2017 12:01:...| 07-01-2017|    1658493752|\n",
+      "+-------------------+--------------------+-----------+--------------+\n",
       "\n"
      ]
     }
@@ -134,7 +166,7 @@
    "source": [
     "# We add a new column that is filled with the current time\n",
     "# note the column type\n",
-    "df1 = df.withColumn(\"timestamp_4\", lit(unix_timestamp()))\n",
+    "df1 = df.withColumn(\"unix_timestamp\", lit(unix_timestamp()))\n",
     "df1.printSchema()\n",
     "df1.show()\n"
    ]
@@ -157,9 +189,9 @@
       "+-----------+-----------+-----------+\n",
       "|timestamp_1|timestamp_2|timestamp_3|\n",
       "+-----------+-----------+-----------+\n",
-      "| 1561982479| 1561982479|       null|\n",
-      "| 1530446479| 1530446479|       null|\n",
-      "| 1498910479| 1498910479|       null|\n",
+      "| 1561975279| 1561975279|       null|\n",
+      "| 1530439279| 1530439279|       null|\n",
+      "| 1498903279| 1498903279|       null|\n",
       "+-----------+-----------+-----------+\n",
       "\n"
      ]
@@ -183,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -200,9 +232,9 @@
       "+-----------+-----------+-----------+-----------+\n",
       "|timestamp_1|timestamp_2|timestamp_3|timestamp_4|\n",
       "+-----------+-----------+-----------+-----------+\n",
-      "| 1561982479| 1561982479| 1561939200| 1632594849|\n",
-      "| 1530446479| 1530446479| 1530403200| 1632594849|\n",
-      "| 1498910479| 1498910479| 1498867200| 1632594849|\n",
+      "| 1561975279| 1561975279| 1561932000| 1658493780|\n",
+      "| 1530439279| 1530439279| 1530396000| 1658493780|\n",
+      "| 1498903279| 1498903279| 1498860000| 1658493780|\n",
       "+-----------+-----------+-----------+-----------+\n",
       "\n"
      ]
@@ -230,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -246,9 +278,9 @@
       "+-------------------+-------------------+-----------+-------------------+\n",
       "|timestamp_1        |timestamp_2        |timestamp_3|timestamp_4        |\n",
       "+-------------------+-------------------+-----------+-------------------+\n",
-      "|2019-07-01 12:01:19|07-01-2019 12:01:19|07-01-2019 |2021-09-25 18:39:03|\n",
-      "|2018-07-01 12:01:19|07-01-2018 12:01:19|07-01-2018 |2021-09-25 18:39:03|\n",
-      "|2017-07-01 12:01:19|07-01-2017 12:01:19|07-01-2017 |2021-09-25 18:39:03|\n",
+      "|2019-07-01 12:01:19|07-01-2019 12:01:19|07-01-2019 |2022-07-22 14:43:12|\n",
+      "|2018-07-01 12:01:19|07-01-2018 12:01:19|07-01-2018 |2022-07-22 14:43:12|\n",
+      "|2017-07-01 12:01:19|07-01-2017 12:01:19|07-01-2017 |2022-07-22 14:43:12|\n",
       "+-------------------+-------------------+-----------+-------------------+\n",
       "\n"
      ]
@@ -280,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -440,12 +472,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.5 use to_date() function to convert string to date type"
+    "## 5.5 Convert string to date type\n",
+    "\n",
+    "We can use `to_date()` function to convert string to date type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -478,11 +512,328 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "## 5.6 Spark Date functions\n",
+    "\n",
+    "The operation you can call on date in `string` or `timestamp` type are quite limited. But with **Date** type, you can call many prebuilt operations. However, you lose the time precision (hh:mm:ss).\n",
+    "\n",
+    "Below is a list of prebuilt functions:\n",
+    "\n",
+    "- date_format(date, format):\tConverts a date/timestamp/string to a value of string in the format specified by the date format given by the second argument.\n",
+    "- to_date(col): Convert string type containing date value to date format.\n",
+    "- current_date(): Returns the current date as a date column.\n",
+    "\n",
+    "- year(col): Extract the year of a given date as integer.\n",
+    "- quarter(col): Extract the quarter of a given date as integer.\n",
+    "- month(col): Extract the month of a given date as integer.\n",
+    "- hour(col): Extract the hours of a given date as integer.\n",
+    "- minute(col): Extract the minutes of a given date as integer.\n",
+    "- second(col): Extract the seconds of a given date as integer.\n",
+    "- dayofyear(col): Extract the day of the year of a given date as integer.\n",
+    "- dayofmonth(col): Extract the day of the month of a given date as integer.\n",
+    "- dayofweek(col): Extract the day of the week of a given date as integer.\n",
+    "- weekofyear(col): Extract the week number of a given date as integer.\n",
+    "\n",
+    "\n",
+    "\n",
+    "- date_add(start, days): Add days to the date.\n",
+    "- add_months(start, months): Add months to date.\n",
+    "- datediff(end, start):\tReturns difference between two dates in days.\n",
+    "- date_sub(start, days): Subtract the days from date field.\n",
+    "- last_day(date): Returns the last day of the month which the given date belongs to.\n",
+    "- months_between(date1, date2): Returns number of months between two dates.\n",
+    "- next_day(date, dayOfWeek): Returns the first date which is later than the value of the date column.\n",
+    "- trunc(date, format): Returns date truncated to the unit specified by the format."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 33,
    "outputs": [],
-   "source": []
+   "source": [
+    "date_func_df=df.select(\"timestamp_1\")\\\n",
+    "    .withColumn(\"raw_date\",to_date(\"timestamp_1\",\"yyyy-MM-dd hh:mm:ss\"))\\\n",
+    "    .withColumn(\"current_date\", current_date())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+----------+------------+\n",
+      "|        timestamp_1|  raw_date|current_date|\n",
+      "+-------------------+----------+------------+\n",
+      "|2019-01-01 12:01:19|2019-01-01|  2022-07-22|\n",
+      "|2018-07-01 12:01:19|2018-07-01|  2022-07-22|\n",
+      "|2017-12-01 12:01:19|2017-12-01|  2022-07-22|\n",
+      "+-------------------+----------+------------+\n",
+      "\n",
+      "root\n",
+      " |-- timestamp_1: string (nullable = true)\n",
+      " |-- raw_date: date (nullable = true)\n",
+      " |-- current_date: date (nullable = false)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "date_func_df.show()\n",
+    "date_func_df.printSchema()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import year,quarter,month,hour,minute,second,dayofyear,dayofmonth,dayofweek,weekofyear"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 5.6.1 Date extraction\n",
+    "\n",
+    "In feature engineering phase, we often need to extract certain part of the date (e.g. year, month, day). Because date is too complex for model to understand.\n",
+    "\n",
+    "We have below functions to do extraction:\n",
+    "- year(col): Extract the year of a given date as integer.\n",
+    "- quarter(col): Extract the quarter of a given date as integer.\n",
+    "- month(col): Extract the month of a given date as integer.\n",
+    "- hour(col): Extract the hours of a given date as integer.\n",
+    "- minute(col): Extract the minutes of a given date as integer.\n",
+    "- second(col): Extract the seconds of a given date as integer.\n",
+    "\n",
+    "- dayofyear(col): Extract the day of the year of a given date as integer.\n",
+    "- dayofmonth(col): Extract the day of the month of a given date as integer.\n",
+    "- dayofweek(col): Extract the day of the week of a given date as integer.\n",
+    "- weekofyear(col): Extract the week number of a given date as integer."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [],
+   "source": [
+    "# define target date column name\n",
+    "target_col_name=\"raw_date\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+--------------+\n",
+      "|  raw_date|year(raw_date)|\n",
+      "+----------+--------------+\n",
+      "|2019-01-01|          2019|\n",
+      "|2018-07-01|          2018|\n",
+      "|2017-12-01|          2017|\n",
+      "+----------+--------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# extract the year\n",
+    "\n",
+    "date_func_df.select(target_col_name,year(target_col_name)).show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----------------+\n",
+      "|  raw_date|quarter(raw_date)|\n",
+      "+----------+-----------------+\n",
+      "|2019-01-01|                1|\n",
+      "|2018-07-01|                3|\n",
+      "|2017-12-01|                4|\n",
+      "+----------+-----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# extract the quarter\n",
+    "\n",
+    "date_func_df.select(target_col_name,quarter(target_col_name)).show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------------+\n",
+      "|  raw_date|month(raw_date)|\n",
+      "+----------+---------------+\n",
+      "|2019-01-01|              1|\n",
+      "|2018-07-01|              7|\n",
+      "|2017-12-01|             12|\n",
+      "+----------+---------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# extract the month\n",
+    "\n",
+    "date_func_df.select(target_col_name,month(target_col_name)).show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+--------------+----------------+----------------+\n",
+      "|  raw_date|hour(raw_date)|minute(raw_date)|second(raw_date)|\n",
+      "+----------+--------------+----------------+----------------+\n",
+      "|2019-01-01|             0|               0|               0|\n",
+      "|2018-07-01|             0|               0|               0|\n",
+      "|2017-12-01|             0|               0|               0|\n",
+      "+----------+--------------+----------------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# extract the hour,minute,second\n",
+    "\n",
+    "date_func_df.select(target_col_name,hour(target_col_name),minute(target_col_name),second(target_col_name)).show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------------------+--------------------+-------------------+--------------------+\n",
+      "|  raw_date|dayofyear(raw_date)|dayofmonth(raw_date)|dayofweek(raw_date)|weekofyear(raw_date)|\n",
+      "+----------+-------------------+--------------------+-------------------+--------------------+\n",
+      "|2019-01-01|                  1|                   1|                  3|                   1|\n",
+      "|2018-07-01|                182|                   1|                  1|                  26|\n",
+      "|2017-12-01|                335|                   1|                  6|                  48|\n",
+      "+----------+-------------------+--------------------+-------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "date_func_df.select(target_col_name,dayofyear(target_col_name),dayofmonth(target_col_name),dayofweek(target_col_name),weekofyear(target_col_name)).show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 5.6.1 Date arithmetic operation\n",
+    "\n",
+    "Below functions allows us to do arithmetic operations on date columns\n",
+    "\n",
+    "- date_add(start, days): Add days to the date.\n",
+    "- add_months(start, months): Add months to date.\n",
+    "- datediff(end, start):\tReturns difference between two dates in days.\n",
+    "- date_sub(start, days): Subtract the days from date field.\n",
+    "- last_day(date): Returns the last day of the month which the given date belongs to.\n",
+    "- months_between(date1, date2): Returns number of months between two dates.\n",
+    "- next_day(date, dayOfWeek): Returns the first date which is later than the value of the date column.\n",
+    "- trunc(date, format): Returns date truncated to the unit specified by the format."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
