--- a/notebooks/pysparkbasics/L02_DataFrame/S01_DataStructures/05_TimeDate.ipynb
+++ b/notebooks/pysparkbasics/L02_DataFrame/S01_DataStructures/05_TimeDate.ipynb
@@ -528,6 +528,7 @@
     "- date_format(date, format):\tConverts a date/timestamp/string to a value of string in the format specified by the date format given by the second argument.\n",
     "- to_date(col): Convert string type containing date value to date format.\n",
     "- current_date(): Returns the current date as a date column.\n",
+    "- trunc(date, format): Returns date truncated to the unit specified by the format.\n",
     "\n",
     "- year(col): Extract the year of a given date as integer.\n",
     "- quarter(col): Extract the quarter of a given date as integer.\n",
@@ -541,15 +542,13 @@
     "- weekofyear(col): Extract the week number of a given date as integer.\n",
     "\n",
     "\n",
-    "\n",
     "- date_add(start, days): Add days to the date.\n",
     "- add_months(start, months): Add months to date.\n",
     "- datediff(end, start):\tReturns difference between two dates in days.\n",
     "- date_sub(start, days): Subtract the days from date field.\n",
     "- last_day(date): Returns the last day of the month which the given date belongs to.\n",
     "- months_between(date1, date2): Returns number of months between two dates.\n",
-    "- next_day(date, dayOfWeek): Returns the first date which is later than the value of the date column.\n",
-    "- trunc(date, format): Returns date truncated to the unit specified by the format."
+    "- next_day(date, dayOfWeek): Returns the first date which is later than the value of the date column.\n"
    ]
   },
   {
@@ -820,14 +819,275 @@
     "Below functions allows us to do arithmetic operations on date columns\n",
     "\n",
     "- date_add(start, days): Add days to the date.\n",
-    "- add_months(start, months): Add months to date.\n",
-    "- datediff(end, start):\tReturns difference between two dates in days.\n",
     "- date_sub(start, days): Subtract the days from date field.\n",
-    "- last_day(date): Returns the last day of the month which the given date belongs to.\n",
+    "- add_months(start, months): Add months to date.\n",
+    "\n",
+    "- datediff(end, start):\tReturns difference between two dates in days.\n",
     "- months_between(date1, date2): Returns number of months between two dates.\n",
-    "- next_day(date, dayOfWeek): Returns the first date which is later than the value of the date column.\n",
-    "- trunc(date, format): Returns date truncated to the unit specified by the format."
+    "\n",
+    "- last_day(date): Returns the last day of the month which the given date belongs to.\n",
+    "- next_day(date, dayOfWeek): Returns the first date which is later than the value of the date column.\n"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import date_add, date_sub, add_months,datediff,months_between,last_day,next_day"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+----------------------+----------------------+------------------------+\n",
+      "|  raw_date|date_add(raw_date, 50)|date_sub(raw_date, 50)|add_months(raw_date, 12)|\n",
+      "+----------+----------------------+----------------------+------------------------+\n",
+      "|2019-01-01|            2019-02-20|            2018-11-12|              2020-01-01|\n",
+      "|2018-07-01|            2018-08-20|            2018-05-12|              2019-07-01|\n",
+      "|2017-12-01|            2018-01-20|            2017-10-12|              2018-12-01|\n",
+      "+----------+----------------------+----------------------+------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add 50 days, sub 50 days, add 12 months\n",
+    "# when we add 12 months, it's like we add a year\n",
+    "\n",
+    "date_func_df.select(target_col_name,date_add(target_col_name,50),date_sub(target_col_name,50),add_months(target_col_name,12)).show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [],
+   "source": [
+    "# calculate the diff between two dates in days and months\n",
+    "\n",
+    "date_diff=date_func_df.withColumn(\"date_diff_in_days\",datediff(\"current_date\",\"raw_date\"))\\\n",
+    "    .withColumn(\"month_between\",months_between(\"current_date\",\"raw_date\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+----------+------------+-----------------+-------------+\n",
+      "|        timestamp_1|  raw_date|current_date|date_diff_in_days|month_between|\n",
+      "+-------------------+----------+------------+-----------------+-------------+\n",
+      "|2019-01-01 12:01:19|2019-01-01|  2022-07-22|             1298|  42.67741935|\n",
+      "|2018-07-01 12:01:19|2018-07-01|  2022-07-22|             1482|  48.67741935|\n",
+      "|2017-12-01 12:01:19|2017-12-01|  2022-07-22|             1694|  55.67741935|\n",
+      "+-------------------+----------+------------+-----------------+-------------+\n",
+      "\n",
+      "root\n",
+      " |-- timestamp_1: string (nullable = true)\n",
+      " |-- raw_date: date (nullable = true)\n",
+      " |-- current_date: date (nullable = false)\n",
+      " |-- date_diff_in_days: integer (nullable = true)\n",
+      " |-- month_between: double (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "date_diff.show()\n",
+    "date_diff.printSchema()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [],
+   "source": [
+    "# calculate the last day of the month, and next monday\n",
+    "result_day=date_func_df.withColumn(\"last_day\",last_day(target_col_name))\\\n",
+    "    .withColumn(\"next_monday\",next_day(target_col_name,\"Mon\")) \\\n",
+    ".withColumn(\"next_sunday\",next_day(target_col_name,\"Sun\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+----------+------------+----------+-----------+-----------+\n",
+      "|        timestamp_1|  raw_date|current_date|  last_day|next_monday|next_sunday|\n",
+      "+-------------------+----------+------------+----------+-----------+-----------+\n",
+      "|2019-01-01 12:01:19|2019-01-01|  2022-07-22|2019-01-31| 2019-01-07| 2019-01-06|\n",
+      "|2018-07-01 12:01:19|2018-07-01|  2022-07-22|2018-07-31| 2018-07-02| 2018-07-08|\n",
+      "|2017-12-01 12:01:19|2017-12-01|  2022-07-22|2017-12-31| 2017-12-04| 2017-12-03|\n",
+      "+-------------------+----------+------------+----------+-----------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_day.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Truncate the date\n",
+    "\n",
+    "When we extract the year of date, it returns an integer. if we want to have date/timestamp type as return value, we can use\n",
+    " 1. trunc(col, format)\n",
+    " 2. date_trunc(format, col)\n",
+    "\n",
+    "\n",
+    "format can be\n",
+    "- 'year', 'yyyy', 'yy' : to truncate by year\n",
+    "- 'quarter' : to truncate by quater\n",
+    "- 'month', 'mon', 'mm' : to truncate by month\n",
+    "- 'week' : to truncate by week\n",
+    "- 'day' : to truncate by day\n",
+    "\n",
+    "In the below examples, you can notice \n",
+    "- trunc by year: returns the first day of the year of the given date\n",
+    "- trunc by quarter: returns the first day of the quarter of the given date\n",
+    "- trunc by month: returns the first day of the month of the given date\n",
+    "- trunc by week: returns the first day of the week of the given date\n",
+    "- trunc by day: returns the given date"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import trunc,date_trunc"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------------------+------------------------+----------------------+---------------------+\n",
+      "|  raw_date|trunc(raw_date, year)|trunc(raw_date, quarter)|trunc(raw_date, month)|trunc(raw_date, week)|\n",
+      "+----------+---------------------+------------------------+----------------------+---------------------+\n",
+      "|2019-01-01|           2019-01-01|              2019-01-01|            2019-01-01|           2018-12-31|\n",
+      "|2018-07-01|           2018-01-01|              2018-07-01|            2018-07-01|           2018-06-25|\n",
+      "|2017-12-01|           2017-01-01|              2017-10-01|            2017-12-01|           2017-11-27|\n",
+      "+----------+---------------------+------------------------+----------------------+---------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "date_func_df.select(target_col_name,trunc(target_col_name,\"year\"),trunc(target_col_name,\"quarter\"),trunc(target_col_name,\"month\"),trunc(target_col_name,\"week\")).show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+--------------------------+---------------------------+--------------------------+-------------------------+\n",
+      "|  raw_date|date_trunc(year, raw_date)|date_trunc(month, raw_date)|date_trunc(week, raw_date)|date_trunc(day, raw_date)|\n",
+      "+----------+--------------------------+---------------------------+--------------------------+-------------------------+\n",
+      "|2019-01-01|       2019-01-01 00:00:00|        2019-01-01 00:00:00|       2018-12-31 00:00:00|      2019-01-01 00:00:00|\n",
+      "|2018-07-01|       2018-01-01 00:00:00|        2018-07-01 00:00:00|       2018-06-25 00:00:00|      2018-07-01 00:00:00|\n",
+      "|2017-12-01|       2017-01-01 00:00:00|        2017-12-01 00:00:00|       2017-11-27 00:00:00|      2017-12-01 00:00:00|\n",
+      "+----------+--------------------------+---------------------------+--------------------------+-------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "date_func_df.select(target_col_name,date_trunc(\"year\",target_col_name),date_trunc(\"month\",target_col_name),date_trunc(\"week\",target_col_name),date_trunc(\"day\",target_col_name)).show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
