--- a/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/08_ReadWriteExcel.ipynb
+++ b/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/08_ReadWriteExcel.ipynb
@@ -147,6 +147,8 @@
    "source": [
     "## 3.8.3 Use pandas on spark\n",
     "\n",
+    "**Note: With spark 3.1.1, the pandas on spark has problem with types when converting pandas df to spark df. So use stand-alone pandas is\n",
+    "recommended**\n",
     "It requires a dependency 'xlrd', you need to install in on your python virtual env.\n",
     "\n",
     "```shell\n",
