--- a/notebooks/chanlleges/PER.ipynb
+++ b/notebooks/chanlleges/PER.ipynb
@@ -457,7 +457,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "So our objective is to find a low frais, high taux PER contract"
+    "So our objective is to find a low frais, high taux PER contract\n",
+    "\n",
+    "First let's get some baseline"
    ],
    "metadata": {
     "collapsed": false,
@@ -468,10 +470,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "outputs": [],
    "source": [
-    "target_col=[\"Assureur_Support\",\"Frais_Vers\",\"Frais_Gestion_Fonds\",\"Frais_Gestion_UC\",\"Frais_rente\",\"Taux_brut\"]"
+    "target_col=[\"Assureur_Support\",\"Frais_Vers\",\"Frais_Gestion_Fonds\",\"Frais_Gestion_UC\",\"Frais_rente\",\"Taux_brut\"]\n",
+    "\n",
+    "feature_col=[\"Frais_Vers\",\"Frais_Gestion_Fonds\",\"Frais_Gestion_UC\",\"Frais_rente\",\"Taux_brut\"]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-----------------+-------------------+-------------------+-----------+---------+\n",
+      "|summary|       Frais_Vers|Frais_Gestion_Fonds|   Frais_Gestion_UC|Frais_rente|Taux_brut|\n",
+      "+-------+-----------------+-------------------+-------------------+-----------+---------+\n",
+      "|  count|               55|                 55|                 55|         55|       55|\n",
+      "|   mean|2.067272727272727| 0.8170909090909091| 0.7503636363636363|        NaN|      NaN|\n",
+      "| stddev|1.932955379287504| 0.3530642199860295|0.24142297012722402|        NaN|      NaN|\n",
+      "|    min|              0.0|                0.0|                0.0|        0.0|      NaN|\n",
+      "|    25%|              0.0|               0.65|                0.6|        0.8|      NaN|\n",
+      "|    50%|              2.5|                0.8|               0.84|        NaN|      NaN|\n",
+      "|    75%|              3.9|                0.9|               0.96|        2.0|      NaN|\n",
+      "|    max|              5.0|                2.0|                1.2|        NaN|      NaN|\n",
+      "+-------+-----------------+-------------------+-------------------+-----------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_target_col=df.select(target_col)\n",
+    "df_target_col.select(feature_col).summary().show()"
    ],
    "metadata": {
     "collapsed": false,
