finish per chanllenge

--- a/notebooks/chanlleges/PER.ipynb
+++ b/notebooks/chanlleges/PER.ipynb
@@ -520,14 +520,18 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "We can notice that the frais_vers can be very different (min:0, max 5%). The frais_gestion_fonds is between 0 and 2%, the frais_gestion_uc is between 0 and 1.2%.\n",
+    "Note the frais_vers is one time fee, the frais_gestion_fonds and frais_gestion_uc will be charged annually. If the gain of the capital is lower than the sum of\n",
+    "frais_gestion_fonds and frais_gestion_uc, it means you will lose money every year.\n",
+    "\n",
+    "So the goal is to find the lowest frais and highest gain. So below query can build a score board of the best PER contract"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
@@ -580,14 +584,14 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "I notice that the raw data does not have any value of the gain(taux_brut), so we can't go very far with this data."
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   }
