--- a/notebooks/pysparkbasics/L02_DataFrame/S07_Accessing_rows_columns/column_to_list.ipynb
+++ b/notebooks/pysparkbasics/L02_DataFrame/S07_Accessing_rows_columns/column_to_list.ipynb
@@ -37,11 +37,11 @@
    "source": [
     "local=True\n",
     "if local:\n",
-    "    spark=SparkSession.builder.master(\"local[4]\").appName(\"RemoveDuplicates\").getOrCreate()\n",
+    "    spark=SparkSession.builder.master(\"local[4]\").appName(\"access_dataframe_content\").getOrCreate()\n",
     "else:\n",
     "    spark=SparkSession.builder \\\n",
     "                      .master(\"k8s://https://kubernetes.default.svc:443\") \\\n",
-    "                      .appName(\"RemoveDuplicates\") \\\n",
+    "                      .appName(\"access_dataframe_content\") \\\n",
     "                      .config(\"spark.kubernetes.container.image\",\"inseefrlab/jupyter-datascience:master\") \\\n",
     "                      .config(\"spark.kubernetes.authenticate.driver.serviceAccountName\",os.environ['KUBERNETES_SERVICE_ACCOUNT']) \\\n",
     "                      .config(\"spark.kubernetes.namespace\", os.environ['KUBERNETES_NAMESPACE']) \\\n",
