--- a/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/09_ReadSASFile.ipynb
+++ b/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/09_ReadSASFile.ipynb
@@ -441,7 +441,7 @@
     "- org.scala-lang:scala-reflect;2.12.10\n",
     "- org.apache.logging.log4j:log4j-api;2.13.2\n",
     "\n",
-    "Below is an example which works. You can notice we add a jar of the parso. The rest jar files can be foun"
+    "Below is an example which works. You can notice we add a jar of the parso. The rest jar files can be found in the default spark lib, so we don't need to add them explicitly."
    ]
   },
   {
